[project]
name = "memory-layer-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.16.5",
    "collection>=0.1.6",
    "fastapi>=0.117.1",
    "google-genai>=1.38.0",
    "jupyter>=1.1.1",
    "pgvector>=0.4.1",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "pymupdf>=1.26.4",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.36.0",
]
